Refs #12084 Adds divider elements to the mobile list. Also makes the ListItem element correctly load a scene in the app framework and adds some basic support for PhoneGaps BackButton element. !strict
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@23341 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/android/android-app.css
+++ b/mobile/themes/android/android-app.css
@@ -99,7 +99,7 @@
 	padding: 10px;
 	border-bottom: 1px solid #444;
 	position: relative;
-	background-color: white;
+	background-color: black;
 	z-index: 6; /* Must be greater than the .buttons z-index */
 }
 .list .row.mblListItem {
@@ -111,7 +111,7 @@
 }
 
 .list .row.hold {
-	background-color: #ddd;
+	background-color: #444;
 }
 
 .list .buttons {
